--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,5 +6,7 @@
   RewriteCond %{REQUEST_FILENAME} -d
   RewriteRule ^.*$ - [NC,L]
   RewriteRule ^.*$ index.php [NC,L]
+  RewriteRule ^show-([0-9]+)-([0-9]+).html$ index.php?c=index&a=show&id=$1&category=$2 [NC=show]
+  RewriteRule ^list-([0-9]+)-([0-9]+).html$ index.php?c=index&a=list&id=$1&category=$2 [NC=list]
 </ifModule>
 
